# Copyright (c) 2022 National Institute of Advanced Industrial Science and Technology (AIST)
# All rights reserved.
#
# This software is released under the MIT License.
# http://opensource.org/licenses/mit-license.php
[workspace]
default-members = ["hypervisor_bootloader", "hypervisor_kernel"]
members = ["common", "hypervisor_bootloader", "hypervisor_kernel", "uefi", "xtask"]
resolver = "3"

[workspace.package]
version = "1.5.0"
edition = "2024"
license = "MIT"

[profile.release.package.hypervisor_bootloader]
strip = "symbols"

[profile.release.package.hypervisor_kernel]
strip = "symbols"
