# Copyright (c) 2022 RIKEN
# Copyright (c) 2022 National Institute of Advanced Industrial Science and Technology (AIST)
# All rights reserved.
#
# This software is released under the MIT License.
# http://opensource.org/licenses/mit-license.php
[package]
name = "common"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
advanced_memory_manager = []
