# Copyright (c) 2022 RIKEN
# Copyright (c) 2022 National Institute of Advanced Industrial Science and Technology (AIST)
# All rights reserved.
#
# This software is released under the MIT License.
# http://opensource.org/licenses/mit-license.php
[package]
name = "hypervisor_bootloader"
version = "0.4.0"
edition = "2021"

[features]
default = ["smmu", "i210", "mt27800", "fast_restore", "acpi_table_protection", "contiguous_bit"]
smmu = []
i210 = []
mt27800 = []
fast_restore = []
acpi_table_protection = []
contiguous_bit = []
a64fx = []

[dependencies]
common = { path = "../common" }
uefi = { path = "../uefi" }

[profile.release]
strip = "symbols"
