# Copyright (c) 2022 RIKEN
# Copyright (c) 2022 National Institute of Advanced Industrial Science and Technology (AIST)
# All rights reserved.
#
# This software is released under the MIT License.
# http://opensource.org/licenses/mit-license.php
[package]
name = "hypervisor_bootloader"
version = "1.3.0"
edition = "2021"
resolver = "2"

[features]
default = ["smmu", "i210", "mt27800", "fast_restore", "acpi_table_protection", "contiguous_bit", "advanced_memory_manager"]
smmu = []
i210 = []
mt27800 = []
fast_restore = []
acpi_table_protection = []
contiguous_bit = []
mrs_msr_emulation = []
a64fx = ["mrs_msr_emulation"]
advanced_memory_manager = [] # Bootloader uses stack style allocator
tftp = []
edit_dtb_memory = []
save_dtb = []
raspberrypi = ["edit_dtb_memory", "save_dtb"]

[dependencies]
common = { path = "../common" }
uefi = { path = "../uefi" }
