# Copyright (c) 2022 RIKEN
# Copyright (c) 2022 National Institute of Advanced Industrial Science and Technology (AIST)
# All rights reserved.
#
# This software is released under the MIT License.
# http://opensource.org/licenses/mit-license.php
[package]
name = "hypervisor_bootloader"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = ["smmu", "fast_restore", "contiguous_bit"]
minimum = []
smmu = []
fast_restore = []
contiguous_bit = []
tftp = []
a64fx = []
edit_dtb_memory = []
save_dtb = []
raspberrypi = ["edit_dtb_memory", "save_dtb"]
embed_kernel = []

[dependencies]
common = { path = "../common" }
uefi = { path = "../uefi" }
