# Copyright (c) 2022 RIKEN
# Copyright (c) 2022 National Institute of Advanced Industrial Science and Technology (AIST)
# All rights reserved.
#
# This software is released under the MIT License.
# http://opensource.org/licenses/mit-license.php

[package]
name = "hypervisor_kernel"
version = "1.2.0"
edition = "2021"
resolver = "2"

[features]
default = ["smmu", "i210", "mt27800", "fast_restore", "acpi_table_protection", "contiguous_bit", "advanced_memory_manager"]
smmu = []
i210 = []
mt27800 = []
fast_restore = []
acpi_table_protection = []
contiguous_bit = []
mrs_msr_emulation = []
a64fx = ["mrs_msr_emulation"]
advanced_memory_manager = ["common/advanced_memory_manager"]
tftp = []
edit_dtb_memory = []
u_boot = ["edit_dtb_memory"]

[dependencies]
common = { path = "../common" }
