# Copyright (c) 2022 RIKEN
# Copyright (c) 2022 National Institute of Advanced Industrial Science and Technology (AIST)
# All rights reserved.
#
# This software is released under the MIT License.
# http://opensource.org/licenses/mit-license.php
[package]
name = "hypervisor_kernel"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = ["smmu", "i210", "mt27800", "fast_restore", "acpi_table_protection", "contiguous_bit", "advanced_memory_manager"]
minimum = []
smmu = []
i210 = []
mt27800 = []
fast_restore = []
acpi_table_protection = []
contiguous_bit = []
mrs_msr_emulation = []
a64fx = ["mrs_msr_emulation"]
advanced_memory_manager = ["common/advanced_memory_manager"]
virtio = []
virtio_net = ["virtio"]
embed_kernel = []

[dependencies]
common = { path = "../common" }
